# music-synthesizer-for-android

app/: CMakeLists.txt  build.gradle
app/src/main/jni/: android_glue.cc
gradle/wrapper/: gradle-wrapper.properties
